# pacifica-rs

./: Cargo.toml  GUIDELINES.md  HOW-TO-CONTRIBUTE.md  LICENSE  README.md  README_zh_CN.md  rustfmt.toml
examples/counter/: Cargo.toml
examples/counter/src/: counter_fsm.rs  lib.rs  main.rs  meta.rs  network.rs  requests.rs
extension/rocksdb-logstore/: Cargo.toml
extension/rocksdb-logstore/src/: lib.rs  storage.rs  util.rs
extension/rpc-impl-grpc/: Cargo.toml  build.rs
extension/rpc-impl-grpc/proto/: pacifica_rpc.proto
extension/rpc-impl-grpc/src/: grpc_client.rs  grpc_server.rs  lib.rs  pacifica.rs  response_error.rs  router.rs  tests.rs
extension/segment-logstore/: Cargo.toml
extension/segment-logstore/src/: lib.rs
macros/: Cargo.toml
macros/src/: expand.rs  lib.rs
pacifica/: Cargo.toml
pacifica/src/: error.rs  lib.rs  str_node_id.rs  test.rs  type_config.rs
pacifica/src/config_cluster/: error.rs  meta_client.rs  mod.rs
pacifica/src/core/: caught_up.rs  command.rs  core_notification.rs  mod.rs  notification_msg.rs  operation.rs  pacifica_core.rs  replica_group_agent.rs  replica_msg.rs  task_sender.rs
pacifica/src/core/ballot/: ballot.rs  ballot_box.rs  error.rs  mod.rs  task.rs
pacifica/src/core/fsm/: commit_result.rs  error.rs  mod.rs  state_machine_caller.rs  task.rs
pacifica/src/core/lifecycle/: lifecycle.rs  mod.rs
pacifica/src/core/log/: error.rs  log_manager.rs  mod.rs  task.rs
pacifica/src/core/replicator/: caught_up_listener.rs  mod.rs  options.rs  replicator.rs  replicator_group.rs  replicator_type.rs  task.rs
pacifica/src/core/snapshot/: error.rs  mod.rs  snapshot_executor.rs  task.rs
pacifica/src/core/state/: append_entries_handler.rs  candidate_state.rs  install_snapshot_handler.rs  mod.rs  primary_state.rs  secondary_state.rs  stateless_state.rs
pacifica/src/fsm/: entry.rs  error.rs  mod.rs  state_machine.rs
pacifica/src/model/: log_entry.rs  log_id.rs  mod.rs  replica_group.rs  replica_id.rs  replica_state.rs
pacifica/src/network/: mod.rs  replica_client.rs
pacifica/src/options/: error.rs  mod.rs  replica_option.rs  replica_option_test.rs
pacifica/src/pacifica/: codec.rs  declare_pacifica_types.rs  mod.rs  replica.rs  replica_inner.rs  router.rs
pacifica/src/pacifica/message/: append_entries.rs  mod.rs
pacifica/src/rpc/: error.rs  mod.rs  replica_client.rs  replica_service.rs  rpc_option.rs
pacifica/src/rpc/message/: append_entries.rs  get_file.rs  install_snapshot.rs  mod.rs  replica_recover.rs  transfer_primary.rs
pacifica/src/runtime/: async_runtime.rs  error.rs  mod.rs  mpsc.rs  mpsc_unbounded.rs  oneshot.rs  type_config_ext.rs  watch.rs
pacifica/src/runtime/tokio_impl/: tokio_mpsc.rs  tokio_mpsc_unbounded.rs  tokio_oneshot.rs  tokio_runtime.rs  tokio_watch.rs
pacifica/src/storage/: error.rs  fs_snapshot_storage.rs  get_file_rpc.rs  log_entry_codec.rs  log_reader.rs  log_storage.rs  log_writer.rs  mod.rs  snapshot_meta.rs  snapshot_reader.rs  snapshot_storage.rs  snapshot_writer.rs
pacifica/src/storage/fs_impl/: file_downloader.rs  file_service.rs  fs_snapshot_storage.rs  get_file_rpc.rs  mod.rs
pacifica/src/storage/rocksdb_impl/: mod.rs  storage.rs  tests.rs
pacifica/src/util/: byte_size.rs  checksum.rs  close_util.rs  instant.rs  leased.rs  mod.rs  repeated_timer.rs  utils.rs
tests/: Cargo.toml
