[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["cff"]
categories = ["algorithms", "asynchronous", "replication"]
description = "rust implementation of PacificA: Replication in Log-Based Distributed Storage Systems"
documentation = ""
homepage = "https://github.com/bybyset/pacifica-rs"
keywords = ["pacifica", "consensus"]
license = "MIT"
repository = "https://github.com/bybyset/pacifica-rs"


[workspace.dependencies]



[workspace]
members = ["pacifica", "tests"]
