[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["cff"]
categories = ["algorithms", "asynchronous", "replication"]
description = "rust implementation of PacificA: Replication in Log-Based Distributed Storage Systems"
documentation = ""
homepage = "https://github.com/bybyset/pacifica-rs"
keywords = ["pacifica", "consensus"]
license = "MIT"
repository = "https://github.com/bybyset/pacifica-rs"


[workspace.dependencies]
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-appender = "0.2.3"
tracing-futures = "0.2.5"

bytes = "1.9.0"
byteorder = "1.5.0"
byte-unit = "5.1.4"
thiserror = "2.0.3"
anyerror = "0.1.12"
clap = { version = "4.5.21", features = ["derive", "env"] }
crc = "3.2.1"
futures = "0.3.31"
tokio = { version = "1.41.1", default-features = false, features = [
    "io-util",
    "macros",
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
] }
tonic = { version = "0.12.3" }
tonic-build = { version = "0.12.3" }
prost = { version = "0.13.5" }
prost-derive = { version = "0.13.5" }
prost-build = { version = "0.13.5" }

quote = "1.0"
proc-macro2 = "1.0"
syn = "2.0"

rocksdb = {version = "0.23.0"}
tempfile = { version = "3.17.1" }

[workspace]
members = ["pacifica", "macros", "tests", "extension/rpc-impl-grpc", ]

exclude = [
    "examples/counter"
]
