[package]
name = "pacifica-rs"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
categories = { workspace = true }
description = { workspace = true }
documentation = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
tracing-futures = { workspace = true }

byte-unit = { workspace = true }
thiserror = { workspace = true }
anyerror = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true, optional = true }

pacifica-rs-macros = { path = "../macros" }


[features]

default = ["tokio-runtime"]

# Enable the default Tokio runtime
tokio-runtime = ["tokio"]