[package]
name = "pacifica-rs"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
categories = { workspace = true }
description = { workspace = true }
documentation = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
tracing-futures = { workspace = true }

bytes = { workspace = true }
byteorder = { workspace = true }
byte-unit = { workspace = true }
thiserror = { workspace = true }
anyerror = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true, optional = true }
rocksdb = {workspace = true, optional = true}
crc = {workspace = true}

log = "0.4.22"

[dev-dependencies]
tempfile = {workspace = true}


[features]

default = ["tokio-runtime", "snapshot-storage-fs", "log-storage-rocksdb"]

# Enable the default Tokio runtime
tokio-runtime = ["dep:tokio"]
log-storage-rocksdb = ["dep:rocksdb"]
snapshot-storage-fs = []
