[package]
name = "pacifica-rs-example-counter"
description = "A counter example for pacifica-rs"
version = "0.1.0"
edition = "2021"

[dependencies]

pacifica-rs = { path = "../../pacifica" , features = ["tokio-runtime"]}
pacifica-rs-rpc-impl-grpc = {path = "../../extension/rpc-impl-grpc"}


bytes = "1.9.0"