[package]
name = "pacifica-rs-example-counter"
description = "A counter example for pacifica-rs"
version = "0.1.0"
edition = "2021"

[dependencies]

pacifica-rs = { path = "../../pacifica" , features = ["tokio-runtime"]}
pacifica-rs-rpc-impl-grpc = {path = "../../extension/rpc-impl-grpc"}
anyerror = "0.1.12"
tokio = "1.41.1"
bytes = "1.9.0"

## 日志、统计、追踪
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["local-time"] }
chrono = "0.4.40"
clap = { version = "4.5.21", features = ["derive"] }