[package]
name = "pacifica-rs-rocksdb-logstore"
description = "A rocksdb based implementation of the `pacifica-rs::LogStorage`"
version.workspace = true
edition.workspace = true
authors.workspace = true
categories.workspace = true

documentation.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
pacifica-rs = {path = "../../pacifica"}
anyerror = {workspace = true}
rocksdb = "0.23.0"
byteorder = {workspace = true}