[package]
name = "pacifica-rs-rocksdb-logstore"
description = "A rocksdb based implementation of the `pacifica-rs::LogStorage`"
version.workspace = true
edition.workspace = true
authors.workspace = true
categories.workspace = true

documentation.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
pacifica-rs = {path = "../../pacifica"}
anyerror = {workspace = true}
byteorder = {workspace = true}


[dependencies.rocksdb]
version = "0.23.0"
default-features = false
features = ["lz4"]
