[package]
name = "pacifica-rs-rpc-impl-grpc"
description = "grpc support for pcifica-rs"
version.workspace = true
edition.workspace = true
authors.workspace = true
categories.workspace = true
documentation.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
pacifica-rs = {path = "../../pacifica", features = ["tokio-runtime"], version = "1.0.0"}
tonic = { workspace = true}
tonic-types = "0.12.3"
prost = { workspace = true}
bytes = {workspace = true}
anyerror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
prost-build = { workspace = true}
tonic-build = { workspace = true}


[build-dependencies]
tonic-build = { workspace = true, features = ["prost"]}
